--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <p>© 2023 Diário de Treino</p>
     </footer>
 
+    <!-- A TAG SCRIPT DEVE ESTAR AQUI, NO FINAL DO BODY -->
     <script src="script.js"></script>
 </body>
 </html>
